Add Boba Milk Tea recipe basic recipe page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>"Swervin's Odin Recipes</title>
+        <title>Swervin's Odin Recipes</title>
         <meta charset="UTF-8">
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <h3>Recipes</h3>
+        <ol>
+            <li><a href="recipes/boba-milk-tea.html">Boba Milk Tea</a></li>
+        </ol>
     </body>
 </html>
