Add all details in the boba milk tea recipe page

--- a/recipes/boba-milk-tea.html
+++ b/recipes/boba-milk-tea.html
@@ -8,5 +8,22 @@
 </head>
 <body>
     <h1>Boba Milk Tea</h1>
+    <img src="../images/boba-milk-tea-image.jpeg" alt="Boba Milk Tea">
+    <h2>Description</h2>
+    <p><Boba tea, or bubble tea, is a popular drink that originated from Taiwan. We will be following instructions on how to make some delicious boba./p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Some cold water</li>
+        <li>Some packaged tapioca starch balls</li>
+        <li>Some brown sugar</li>
+        <li>Some white sugar</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Boil the water in a large pot. Pour in the tapioca and simmer for 25 minutes. Stir occasionally to prevent sticking. Remove from heat and let balls sit in water for 25 minutes</li>
+        <li>Return pot to the heat. Simmer and stir for 25 minutes more. Remove from heat and let rest again until centers of the balls are no longer powder, another 25 minutes. Drain.</li>
+        <li>Combine brown sugar and white sugar in a large bowl. Pour tapioca balls into the sugar mixture. Cover with a damp cloth and let rest for 15 minutes while preparing the tea.</li>
+        <li>Scoop some tapioca into your mixed tea of your choice. Enjoy with large straws to suck up the tapioca, or use spoons.</li>
+    </ol>
 </body>
 </html>
