--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <body>
         <h1>Odin Recipes</h1>
         <h2>Recipes</h2>
-        <ol>
+        <ul>
             <li><a href="recipes/boba-milk-tea.html">Boba Milk Tea</a></li>
-        </ol>
+            <li><a href="recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
+            <li><a href="recipes/california-roll.html">California Roll</a></li>
+        </ul>
     </body>
 </html>
