Add in recipe details for Scrambled Eggs

--- a/recipes/boba-milk-tea.html
+++ b/recipes/boba-milk-tea.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Boba Milk Tea</h1>
-    <img src="../images/boba-milk-tea-image.jpeg" alt="Boba Milk Tea">
+    <img src="../images/boba-milk-tea-image.jpeg" alt="Boba Milk Tea" width="500px">
     <h2>Description</h2>
     <p><Boba tea, or bubble tea, is a popular drink that originated from Taiwan. We will be following instructions on how to make some delicious boba./p>
     <h2>Ingredients</h2>
