--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     <h1>Scrambed Eggs</h1>
+    <img src="../images/scrambled-eggs.jpeg" alt="Scrambled Eggs" width="500px">
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>A few eggs</li>
+        <li>A little bit of sliced Cheddar cheese</li>
+        <li>A few thin slices of ham (Optional)</li>
+        <li>A little bit of heavy whipping cream</li>
+        <li>A little bit of butter</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Whisk the eggs together in a small bowl until smooth. Mix in Cheddar cheese, ham, and heavy cream.</li>
+        <li>Melt butter in a skillet over medium heat. Pour in egg mixture; cook and stir until set but still moist, 3 to 5 minutes.</li>
+    </ol>
 </body>
 </html>
