--- a/recipes/california-roll.html
+++ b/recipes/california-roll.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>California Roll</h1>
+    <img src="../images/california-roll.jpeg" alt="California Roll" width="500px">
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 </body>
 </html>
