--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -10,6 +10,9 @@
     <h1>Scrambed Eggs</h1>
     <img src="../images/scrambled-eggs.jpeg" alt="Scrambled Eggs" width="500px">
 
+    <h2>Description</h2>
+    <p>Classic recipe of scrambled eggs!</p>
+
     <h2>Ingredients</h2>
     <ul>
         <li>A few eggs</li>
