Add details to California Roll recipe page

--- a/recipes/california-roll.html
+++ b/recipes/california-roll.html
@@ -10,22 +10,28 @@
     <h1>California Roll</h1>
     <img src="../images/california-roll.jpeg" alt="California Roll" width="500px">
 
+    <h2>Description</h2>
+    <p>This is a classic California roll recipe, great for those who are just learning to make sushi. Serve as an appetizer or as part of a Japanese meal.</p>
+
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Some cucumber, sliced into spears</li>
+        <li>Some finely chopped crab sticks</li>
+        <li>Some mayonnaise</li>
+        <li>Some sheets of nori (dry seaweed)</li>
+        <li>Cooked sushi rice</li>
+        <li>Some sesame seeds</li>
+        <li>An avocado, sliced</li>
+        <li>Some tobiko (flying fish roe)</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Stir chopped crab sticks and mayonnaise together in a small bowl.</li>
+        <li>Lay a sheet of nori on a bamboo mat. Pat a thin, even layer of rice over the nori with wet hands, leaving a little edge at the bottom. Sprinkle rice with sesame seeds. Carefully flip over.</li>
+        <li>Add some of the crab mixture in a line across the sheet about 1/3 of the way from the top. Layer with 1 or 2 cucumber spears and 1 to 3 avocado slices</li>
+        <li>Using the bamboo mat, roll the sheet tightly into a cylinder, starting at the top edge. Moisten the uncovered edge with water and finish rolling once you reached the bottom. Repeat with the remaining ingredients.</li>
+        <li>Slice each roll into 3/4 inch pieces. Garnish each piece with 1/8 teaspoon tobiko</li>
     </ol>
 </body>
 </html>
