--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <title>Swervin's Odin Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <h2>Recipes</h2>
-        <ul>
-            <li><a href="recipes/boba-milk-tea.html">Boba Milk Tea</a></li>
-            <li><a href="recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
-            <li><a href="recipes/california-roll.html">California Roll</a></li>
+        <ul class="recipe-list">
+            <li class="recipe-item"><a href="recipes/boba-milk-tea.html">Boba Milk Tea</a></li>
+            <li class="recipe-item"><a href="recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
+            <li class="recipe-item"><a href="recipes/california-roll.html">California Roll</a></li>
         </ul>
     </body>
 </html>
