--- a/recipes/boba-milk-tea.html
+++ b/recipes/boba-milk-tea.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boba Milk Tea</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Boba Milk Tea</h1>
     <img src="../images/boba-milk-tea-image.jpeg" alt="Boba Milk Tea" width="500px">
     <h2>Description</h2>
-    <p><Boba tea, or bubble tea, is a popular drink that originated from Taiwan. We will be following instructions on how to make some delicious boba./p>
+    <p>Boba tea, or bubble tea, is a popular drink that originated from Taiwan. We will be following instructions on how to make some delicious boba.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>Some cold water</li>
